<resources>
    <string name="app_name">Car Rental</string>
    <string name="car_rental">Car Rental</string>
    <string name="nation_wide_car_rental_service">Nation Wide Car Rental Service</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>

    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_start_your_journey">Sign up to start your journey</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_nic">Enter your NIC</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="todo">TODO</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account?? Login</string>

    <string name="switch_to_admin_mode">Switch to admin mode</string>
    <string name="adminmode">TODO</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="costumer_mode">Costumer Mode</string>
    <string name="user_name">user name</string>
    <string name="logout">Logout</string>

    <string name="add_emp_to_db">Add new Employees</string>
    <string name="enter_emp_name">Enter Full Name</string>
    <string name="emp_dob">Enter Date Of Birth</string>
    <string name="enter_emp_nic">Enter NIC Number</string>
    <string name="enter_emp_phone">Enter Phone Number</string>
    <string name="emp_post">Enter Empolyee Occupation</string>
    <string name="enter_emp_email">Enter Empolyee Email</string>
    <string name="save_emp">Add Employee</string>

    <string name="add_a_car">Add a new car</string>
    <string name="car_model">Car model</string>
    <string name="first_owner">Name Of the Owner</string>
    <string name="vehicle_id">Vehicle ID</string>
    <string name="save_car">New Car</string>

    <string name="emp_name">Employee Name</string>
    <string name="emp_list">Employee List</string>
    <string name="view_employees">View Employees</string>
    <string name="view_cars">View Cars</string>


</resources>