<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signup"
        android:orientation="vertical"
        android:background="#f2f2f2"
        android:padding="20dp"
        >

        <ImageButton
            android:id="@+id/customermode"
            android:layout_gravity="end"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:contentDescription="@string/adminmode"
            />


        <TextView
            android:id="@+id/Admintext"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costumer_mode" />

        <ImageView

            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/car"
            android:contentDescription="@string/todo"
            android:transitionName="logoImage"/>


        <TextView
            android:padding="10dp"
            android:id="@+id/welcomeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_admin"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:fontFamily="cursive"
            android:transitionName="logoText"/>


        <TextView
            android:padding="10dp"
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="18sp"
            android:fontFamily="cursive"
            android:transitionName="desc_transition"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/layout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email_address"
                    android:inputType="textEmailAddress"
                    android:transitionName="email_transiton" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/layout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@android:color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:transitionName="password_transiton" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000"
                android:text="@string/login"
                android:textColor="#fff"
                android:transitionName="loginbtn_transiton"/>


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />


        </LinearLayout>
    </LinearLayout>


</ScrollView>