<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".signup"
        android:orientation="vertical"
        android:background="#f2f2f2"
        android:padding="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/car"
            android:contentDescription="@string/todo"
            android:transitionName="logoImage"/>

        <TextView
            android:id="@+id/welcome"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:fontFamily="cursive"
            android:layout_marginTop="20dp"
            android:transitionName="logoText"/>

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_car"
            android:fontFamily="cursive"
            android:textSize="18sp"
            android:transitionName="desc_transition"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/layout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_model"
                    android:inputType="text"
                    android:transitionName="empfullname_transiton" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/layout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@android:color/black"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_owner"
                    android:inputType="text"
                    android:transitionName="empdob_transiton" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/layout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicle_id"
                    android:transitionName="empnic_transiton" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/add_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000"
                android:text="@string/save_car"
                android:textColor="#fff"
                android:transitionName="addemp_transiton" />

            <ProgressBar
                android:id="@+id/progressBarSignup"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:visibility="invisible" />




        </LinearLayout>

    </LinearLayout>

</ScrollView>

